--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,7 +121,7 @@ input, select, textarea {
 /*****************/
 /**NAV & Heading**/
 /*****************/
-.headerImg {
+.heading {
 	background-image: url("/images/headImg.jpg");
 }
 
