--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,6 +38,10 @@ body {
 	line-height: 1;
 }
 
+div{
+	display: block;
+}
+
 ol, ul {
 	list-style: none;
 }
@@ -119,26 +123,41 @@ input, select, textarea {
 		}
 
 /*****************/
-/**NAV & Heading**/
+/* Heading**/
 /*****************/
-.heading {
-	background-image: url("/images/headImg.jpg");
+.header-sec {
+
+	background-image: url('../portfolio pics/headImg.png');
+	/* Background image is centered vertically and horizontally at all times */
+	background-position: center center;
+
+	/* Background image doesn't tile */
+	background-repeat: no-repeat;
+
+	/* Background image is fixed in the viewport so that it doesn't move when
+       the content's height is greater than the image's height */
+	background-attachment: fixed;
+
+	/* This is what makes the background image rescale based
+       on the container's size */
+	background-size: 100% 100%;
+
+	/* Set a background color that will be displayed
+       while the background image is loading */
+	background-color: #464646;
+}
 }
 
-.Home {
-	text-align: center;
-	color: white;
-}
+
 /*Jackie Trang display*/
-.heading {
-	font-size: 5em;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-}
-
+/*.heading {*/
+/*	font-size: 5em;*/
+/*	min-height: 100vh;*/
+/*	display: flex;*/
+/*	flex-direction: column;*/
+/*	align-items: center;*/
+/*	justify-content: center;*/
+/*}*/
 #main {
 	margin-bottom: 0px;
 	margin-top: 0;
@@ -148,18 +167,7 @@ input, select, textarea {
 	font-size: .5em;
 }
 
-.headerImg {
-	position: fixed;
-	top: 0;
-	left: 0;
-	min-width: 100%;
-	min-height: 100%;
-	z-index: -100;
-}
 
-.Home.section {
-	position: relative;
-}
 /* Type */
 
 	body, input, select, textarea {
