--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -242,8 +242,8 @@ input, select, textarea {
 		font-style: italic;
 	}
 
-	p:not(.name-slogan) {
-		margin: 0 0 1em 0;
+	p {
+		margin: 0 0 2em 0;
 	}
 
 	h1 {
