--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,6 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,900");
 
-/*
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -191,7 +186,97 @@ input, select, textarea {
 	margin: 0;
 }
 
+/*Skills*/
+.session-title{
+	font-family: "Chronicle Display Bold", Georgia, serif;
+	font-size: 0.8em;
+}
+.section-wrapper {
+	margin-left:100px;
+	padding-top: 100px;
+	}
+.section-wrapper h1{
+	font-size:2em;
+	font-family: "Chronicle Display Bold", Georgia, serif;
+}
 
+.section .section-wrapper p{
+	font-size:1em;
+	line-height:1.5em
+}
+
+p .about-text {
+	max-width: 50%;
+}
+
+#about-section .about-wrapper .headshot {
+	display:inline-block;
+	width:35%;
+	height:auto;
+	border-radius:50%;
+	margin-top:-100px;
+	float:right;
+	max-width:450px
+}
+
+@media only screen and (max-width: 1000px)
+	#about-section .section-subheading {
+		width: 100%;
+	}
+
+#about-section .section-subheading {
+	width: 60%;
+	font-size: 1.2em;
+	font-weight: 500;
+	line-height: 1.5;
+	margin-top: 1em;
+}
+
+
+
+.skills p, .skills li {
+	font-size: 2em;
+	width: 75%;
+	margin: 1% auto;
+	text-align: center;
+}
+
+hr {
+	margin: 2% auto;
+	width: 60%;
+	color: black;
+	height: 1px;
+	background-color: black;
+}
+ul {
+	padding-left: 0;
+}
+
+.skills li {
+	margin-top: 5px;
+	width: 30%;
+}
+
+.skills li img {
+	max-width: 150px;
+	max-height: 150px;
+	margin-top: 25px;
+	transition-duration: .5s;
+}
+
+.skills li img:hover {
+	transform: scale(1.15);
+	transition-duration: .5s;
+}
+
+.skills ul {
+	width: 70%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	margin: 35px auto;
+	list-style-type: none;
+}
 
 /* Type */
 
@@ -346,29 +431,20 @@ input, select, textarea {
 		padding: 0.5em 0 0.5em 2em;
 	}
 
-	code {
-		background: rgba(144, 144, 144, 0.075);
-		border-radius: 4px;
-		border: solid 1px #c9c9c9;
-		font-family: "Courier New", monospace;
-		font-size: 0.9em;
-		margin: 0 0.25em;
-		padding: 0.25em 0.65em;
-	}
 
-	pre {
-		-webkit-overflow-scrolling: touch;
-		font-family: "Courier New", monospace;
-		font-size: 0.9em;
-		margin: 0 0 2em 0;
-	}
+	/*pre {*/
+	/*	-webkit-overflow-scrolling: touch;*/
+	/*	font-family: "Courier New", monospace;*/
+	/*	font-size: 0.9em;*/
+	/*	margin: 0 0 2em 0;*/
+	/*}*/
 
-		pre code {
-			display: block;
-			line-height: 1.75;
-			padding: 1em 1.5em;
-			overflow-x: auto;
-		}
+	/*	pre code {*/
+	/*		display: block;*/
+	/*		line-height: 1.75;*/
+	/*		padding: 1em 1.5em;*/
+	/*		overflow-x: auto;*/
+	/*	}*/
 
 	hr {
 		border: 0;
