--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3512,3 +3512,77 @@ ul {
 			}
 
 		}
+
+/*Web Dev projects*/
+	.picContainer{
+		position: relative;
+		margin-top: 5%;
+		min-height: 340px;
+		display: flex;
+		align-items: center;
+		width: 100%;
+		justify-content: center;
+	}
+
+	.picContainer img {
+		-webkit-box-shadow: 10px 10px 10px 0px rgba(0,0,0,0.5);
+		-moz-box-shadow: 10px 10px 10px 0px rgba(0,0,0,0.5);
+		box-shadow: 10px 10px 10px 0px rgba(0,0,0,0.5);
+		transition-duration: .25s;
+		width: 80%;
+		height: 80%;
+	}
+
+	.picContainer:hover img{
+		-webkit-box-shadow: 0 0 0 0 rgba(0,0,0,0.5);
+		-moz-box-shadow: 0 0 0 0 rgba(0,0,0,0.5);
+		box-shadow: 0 0 0 0px rgba(0,0,0,0.5);
+		transition-duration: .25s;
+	}
+
+	.picOverlay {
+		margin-left: 10%;
+		width: 80%;
+		height: inherit;
+		opacity: 0;
+		transition-property: opacity;
+		transition-duration: .3s;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		background-color: rgba(70, 70, 67, .8);
+		color: white;
+		font-size: 1em;
+	}
+
+	.picOverlay ul {
+		margin: 0 0 10px 0;
+		list-style-type: none;
+	}
+
+	.picOverlay:hover {
+		opacity: 1;
+	}
+
+	.picOverlay h4{
+		width: inherit;
+		margin-left: 30%;
+		font-size: 1.3em;
+	}
+
+.picOverlay button {
+	transition: all 400ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+	box-shadow: mediumpurple 0 0px 0px 40px inset;
+	border: none;
+	background: transparent;
+	margin-top: 5%;
+	width: 200%;
+	padding: 1%;
+	border-radius: 5px;
+}
