--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -122,7 +122,7 @@ input, select, textarea {
 /*****************/
 .name-slogan {
 
-	background-image: url('../portfolio pics/headImg2-min-min.jpg');
+	background-image: url('../portfolio pics/headImg2-min-min-min.jpg');
 	/* Background image is centered vertically and horizontally at all times */
 	background-position: center center;
 
