--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -122,7 +122,7 @@ input, select, textarea {
 /*****************/
 .name-slogan {
 
-	background-image: url('../portfolio pics/resizeHeadImg.jpg');
+	background-image: url('../portfolio pics/resize-1595952001763752374resizeHeadImg.jpg');
 	/* Background image is centered vertically and horizontally at all times */
 	background-position: center center;
 
