--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -187,8 +187,28 @@ input, select, textarea {
 	margin: 0;
 }
 
-/*Skills*/
+/*About Me session*/
+.container{
+	display: flex;
+}
 
+.about-text {
+	flex: 60%;
+}
+
+.about-img {
+	flex: 40%;}
+
+.about-img .headshot {
+	display:inline-block;
+	width:inherit;
+	height:auto;
+	border-radius:50%;
+	margin-left: 5%;
+	float:right;
+	box-shadow: 10px 10px 10px 0px rgb(206,160,220,0.5);
+}
+/*Skills*/
 
 .session-title{
 	font-family: "Chronicle Display Bold", Georgia, serif;
@@ -214,15 +234,7 @@ p .about-text {
 }
 
 
-#about-section .about-wrapper .headshot {
-	display:inline-block;
-	width:35%;
-	height:auto;
-	border-radius:50%;
-	margin-top:-100px;
-	float:right;
-	max-width:450px
-}
+
 
 @media only screen and (max-width: 900px)
 	#about-section #section-subheading {
@@ -230,7 +242,7 @@ p .about-text {
 		display: block;
 	}
 #about-section #section-subheading {
-	width: 60%;
+	width: 100%;
 	font-size: 1.2em;
 	font-weight: 500;
 	line-height: 1.5;
@@ -257,6 +269,8 @@ hr {
 		margin: 0 0 2em 0;
 		padding-left: 1em;
 	}
+
+	/*Wisteria purple color*/
 	.skills .skill-item {
 		margin-left: 1em;
 		display: inline-block;
